# umls

./: .cruft.json  .gitignore  CONTRIBUTING.md  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  umls_ingest.html
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: index.rst.txt  modules.rst.txt  umls_ingest.rst.txt
_static/: documentation_options.js
docs/: conf.py
src/umls_ingest/: __init__.py  cli.py  constants.py  main.py
src/umls_ingest/mappings/: hp_mesh.sssom.tsv  hp_ncit.sssom.tsv  hp_ncit_mesh.sssom.tsv  ncit_mesh.sssom.tsv  umls_hp.sssom.tsv
src/umls_ingest/notebooks/: SandBox.ipynb
tests/: __init__.py  demo_test.py
